pascalParser.cpp

    #include <map>
    #include "intermediate/symtab/Symtab.h"
    #include "intermediate/type/Typespec.h"
    using namespace intermediate::symtab;
    using namespace intermediate::type;


// Generated from pascal.g4 by ANTLR 4.7.2


#include "pascalVisitor.h"

#include "pascalParser.h"


using namespace antlrcpp;
using namespace antlr4;

pascalParser::pascalParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

pascalParser::~pascalParser() {
  delete _interpreter;
}

std::string pascalParser::getGrammarFileName() const {
  return "pascal.g4";
}

const std::vector<std::string>& pascalParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& pascalParser::getVocabulary() const {
  return _vocabulary;
}

//----------------- ProgramContext ------------------------------------------------------------------

//ProgramContext() 
pascalParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

//programHeader() retrieve child context
pascalParser::ProgramHeaderContext* pascalParser::ProgramContext::programHeader() {
  return getRuleContext<pascalParser::ProgramHeaderContext>(0);
}

//block() retrieve child context
pascalParser::BlockContext* pascalParser::ProgramContext::block() {
  return getRuleContext<pascalParser::BlockContext>(0);
}

//getRuleIndex() returns index of "program rule"
size_t pascalParser::ProgramContext::getRuleIndex() const {
  //cout << "pascalParser::ProgramContext::getRuleIndex() called" << endl;
  return pascalParser::RuleProgram;
}

//accept() checks if visitor is pascalVisitor and calls visitProgram() otherwise calls visitChildreN()
antlrcpp::Any pascalParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

//program() starts parsing "program" rule
pascalParser::ProgramContext* pascalParser::program() {
  
  //creates new instance of ProgramContext
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());

  //enters "program" rules
  enterRule(_localctx, 0, pascalParser::RuleProgram);

  //ensures exit of "program" rules
  auto onExit = finally([=] {
    exitRule();
  });

  //parses "program" rule
  try {
    enterOuterAlt(_localctx, 1);
    setState(182);
    programHeader();
    setState(183);
    block();
    setState(184);
    match(pascalParser::T__0);
   
  } //if exception, reports error to error handler, stores exception, tries to recover from error by resyncing parser and input stream
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramHeaderContext ------------------------------------------------------------------

pascalParser::ProgramHeaderContext::ProgramHeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* pascalParser::ProgramHeaderContext::PROGRAM() {
  return getToken(pascalParser::PROGRAM, 0);
}

pascalParser::ProgramIdentifierContext* pascalParser::ProgramHeaderContext::programIdentifier() {
  return getRuleContext<pascalParser::ProgramIdentifierContext>(0);
}

pascalParser::ProgramParametersContext* pascalParser::ProgramHeaderContext::programParameters() {
  return getRuleContext<pascalParser::ProgramParametersContext>(0);
}


size_t pascalParser::ProgramHeaderContext::getRuleIndex() const {
  return pascalParser::RuleProgramHeader;
}


antlrcpp::Any pascalParser::ProgramHeaderContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitProgramHeader(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::ProgramHeaderContext* pascalParser::programHeader() {
  ProgramHeaderContext *_localctx = _tracker.createInstance<ProgramHeaderContext>(_ctx, getState());
  enterRule(_localctx, 2, pascalParser::RuleProgramHeader);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(186);
    match(pascalParser::PROGRAM);
    setState(187);
    programIdentifier();
    setState(189);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == pascalParser::T__2) {
      setState(188);
      programParameters();
    }
    setState(191);
    match(pascalParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramParametersContext ------------------------------------------------------------------

pascalParser::ProgramParametersContext::ProgramParametersContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> pascalParser::ProgramParametersContext::IDENTIFIER() {
  return getTokens(pascalParser::IDENTIFIER);
}

tree::TerminalNode* pascalParser::ProgramParametersContext::IDENTIFIER(size_t i) {
  return getToken(pascalParser::IDENTIFIER, i);
}


size_t pascalParser::ProgramParametersContext::getRuleIndex() const {
  return pascalParser::RuleProgramParameters;
}


antlrcpp::Any pascalParser::ProgramParametersContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitProgramParameters(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::ProgramParametersContext* pascalParser::programParameters() {
  ProgramParametersContext *_localctx = _tracker.createInstance<ProgramParametersContext>(_ctx, getState());
  enterRule(_localctx, 4, pascalParser::RuleProgramParameters);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(193);
    match(pascalParser::T__2);
    setState(194);
    match(pascalParser::IDENTIFIER);
    setState(199);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == pascalParser::T__3) {
      setState(195);
      match(pascalParser::T__3);
      setState(196);
      match(pascalParser::IDENTIFIER);
      setState(201);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(202);
    match(pascalParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramIdentifierContext ------------------------------------------------------------------

pascalParser::ProgramIdentifierContext::ProgramIdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* pascalParser::ProgramIdentifierContext::IDENTIFIER() {
  return getToken(pascalParser::IDENTIFIER, 0);
}


size_t pascalParser::ProgramIdentifierContext::getRuleIndex() const {
  return pascalParser::RuleProgramIdentifier;
}


antlrcpp::Any pascalParser::ProgramIdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitProgramIdentifier(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::ProgramIdentifierContext* pascalParser::programIdentifier() {
  ProgramIdentifierContext *_localctx = _tracker.createInstance<ProgramIdentifierContext>(_ctx, getState());
  enterRule(_localctx, 6, pascalParser::RuleProgramIdentifier);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(204);
    match(pascalParser::IDENTIFIER);

    // Token* identToken = match(pascalParser::IDENTIFIER);
    // _localctx->entry = stack->enterLocal(identToken->getText(), Kind::PROGRAM);
    
    // Symtab* newTable = new Symtab(stack->getCurrNestingLevel() + 1);
    // stack->push(newTable);
    // newTable->setOwner(_localctx->entry);
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

pascalParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

pascalParser::DeclarationsContext* pascalParser::BlockContext::declarations() {
  return getRuleContext<pascalParser::DeclarationsContext>(0);
}

pascalParser::CompoundStatementContext* pascalParser::BlockContext::compoundStatement() {
  return getRuleContext<pascalParser::CompoundStatementContext>(0);
}


size_t pascalParser::BlockContext::getRuleIndex() const {
  return pascalParser::RuleBlock;
}


antlrcpp::Any pascalParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::BlockContext* pascalParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 8, pascalParser::RuleBlock);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(206);
    declarations();
    setState(207);
    compoundStatement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationsContext ------------------------------------------------------------------

pascalParser::DeclarationsContext::DeclarationsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

pascalParser::ConstantsPartContext* pascalParser::DeclarationsContext::constantsPart() {
  return getRuleContext<pascalParser::ConstantsPartContext>(0);
}

pascalParser::TypesPartContext* pascalParser::DeclarationsContext::typesPart() {
  return getRuleContext<pascalParser::TypesPartContext>(0);
}

pascalParser::VariablesPartContext* pascalParser::DeclarationsContext::variablesPart() {
  return getRuleContext<pascalParser::VariablesPartContext>(0);
}

pascalParser::RoutinesPartContext* pascalParser::DeclarationsContext::routinesPart() {
  return getRuleContext<pascalParser::RoutinesPartContext>(0);
}


size_t pascalParser::DeclarationsContext::getRuleIndex() const {
  return pascalParser::RuleDeclarations;
}


antlrcpp::Any pascalParser::DeclarationsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitDeclarations(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::DeclarationsContext* pascalParser::declarations() {
  DeclarationsContext *_localctx = _tracker.createInstance<DeclarationsContext>(_ctx, getState());
  enterRule(_localctx, 10, pascalParser::RuleDeclarations);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(212);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == pascalParser::CONST) {
      setState(209);
      constantsPart();
      setState(210);
      match(pascalParser::T__1);
    }
    setState(217);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == pascalParser::TYPE) {
      setState(214);
      typesPart();
      setState(215);
      match(pascalParser::T__1);
    }
    setState(222);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == pascalParser::VAR) {
      setState(219);
      variablesPart();
      setState(220);
      match(pascalParser::T__1);
    }
    setState(227);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == pascalParser::PROCEDURE

    || _la == pascalParser::FUNCTION) {
      setState(224);
      routinesPart();
      setState(225);
      match(pascalParser::T__1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantsPartContext ------------------------------------------------------------------

pascalParser::ConstantsPartContext::ConstantsPartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* pascalParser::ConstantsPartContext::CONST() {
  return getToken(pascalParser::CONST, 0);
}

pascalParser::ConstantDefinitionsListContext* pascalParser::ConstantsPartContext::constantDefinitionsList() {
  return getRuleContext<pascalParser::ConstantDefinitionsListContext>(0);
}


size_t pascalParser::ConstantsPartContext::getRuleIndex() const {
  return pascalParser::RuleConstantsPart;
}


antlrcpp::Any pascalParser::ConstantsPartContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitConstantsPart(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::ConstantsPartContext* pascalParser::constantsPart() {
  ConstantsPartContext *_localctx = _tracker.createInstance<ConstantsPartContext>(_ctx, getState());
  enterRule(_localctx, 12, pascalParser::RuleConstantsPart);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(229);
    match(pascalParser::CONST);
    setState(230);
    constantDefinitionsList();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantDefinitionsListContext ------------------------------------------------------------------

pascalParser::ConstantDefinitionsListContext::ConstantDefinitionsListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<pascalParser::ConstantDefinitionContext *> pascalParser::ConstantDefinitionsListContext::constantDefinition() {
  return getRuleContexts<pascalParser::ConstantDefinitionContext>();
}

pascalParser::ConstantDefinitionContext* pascalParser::ConstantDefinitionsListContext::constantDefinition(size_t i) {
  return getRuleContext<pascalParser::ConstantDefinitionContext>(i);
}


size_t pascalParser::ConstantDefinitionsListContext::getRuleIndex() const {
  return pascalParser::RuleConstantDefinitionsList;
}


antlrcpp::Any pascalParser::ConstantDefinitionsListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitConstantDefinitionsList(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::ConstantDefinitionsListContext* pascalParser::constantDefinitionsList() {
  ConstantDefinitionsListContext *_localctx = _tracker.createInstance<ConstantDefinitionsListContext>(_ctx, getState());
  enterRule(_localctx, 14, pascalParser::RuleConstantDefinitionsList);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(232);
    constantDefinition();
    setState(237);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(233);
        match(pascalParser::T__1);
        setState(234);
        constantDefinition(); 
      }
      setState(239);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantDefinitionContext ------------------------------------------------------------------

pascalParser::ConstantDefinitionContext::ConstantDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

pascalParser::ConstantIdentifierContext* pascalParser::ConstantDefinitionContext::constantIdentifier() {
  return getRuleContext<pascalParser::ConstantIdentifierContext>(0);
}

pascalParser::ConstantContext* pascalParser::ConstantDefinitionContext::constant() {
  return getRuleContext<pascalParser::ConstantContext>(0);
}


size_t pascalParser::ConstantDefinitionContext::getRuleIndex() const {
  return pascalParser::RuleConstantDefinition;
}


antlrcpp::Any pascalParser::ConstantDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitConstantDefinition(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::ConstantDefinitionContext* pascalParser::constantDefinition() {
  ConstantDefinitionContext *_localctx = _tracker.createInstance<ConstantDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 16, pascalParser::RuleConstantDefinition);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(240);
    constantIdentifier();
    setState(241);
    match(pascalParser::T__5);
    setState(242);
    constant();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantIdentifierContext ------------------------------------------------------------------

pascalParser::ConstantIdentifierContext::ConstantIdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* pascalParser::ConstantIdentifierContext::IDENTIFIER() {
  return getToken(pascalParser::IDENTIFIER, 0);
}


size_t pascalParser::ConstantIdentifierContext::getRuleIndex() const {
  return pascalParser::RuleConstantIdentifier;
}


antlrcpp::Any pascalParser::ConstantIdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitConstantIdentifier(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::ConstantIdentifierContext* pascalParser::constantIdentifier() {
  ConstantIdentifierContext *_localctx = _tracker.createInstance<ConstantIdentifierContext>(_ctx, getState());
  enterRule(_localctx, 18, pascalParser::RuleConstantIdentifier);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(244);
    match(pascalParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantContext ------------------------------------------------------------------

pascalParser::ConstantContext::ConstantContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* pascalParser::ConstantContext::IDENTIFIER() {
  return getToken(pascalParser::IDENTIFIER, 0);
}

pascalParser::UnsignedNumberContext* pascalParser::ConstantContext::unsignedNumber() {
  return getRuleContext<pascalParser::UnsignedNumberContext>(0);
}

pascalParser::SignContext* pascalParser::ConstantContext::sign() {
  return getRuleContext<pascalParser::SignContext>(0);
}

pascalParser::CharacterConstantContext* pascalParser::ConstantContext::characterConstant() {
  return getRuleContext<pascalParser::CharacterConstantContext>(0);
}

pascalParser::StringConstantContext* pascalParser::ConstantContext::stringConstant() {
  return getRuleContext<pascalParser::StringConstantContext>(0);
}


size_t pascalParser::ConstantContext::getRuleIndex() const {
  return pascalParser::RuleConstant;
}


antlrcpp::Any pascalParser::ConstantContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitConstant(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::ConstantContext* pascalParser::constant() {
  ConstantContext *_localctx = _tracker.createInstance<ConstantContext>(_ctx, getState());
  enterRule(_localctx, 20, pascalParser::RuleConstant);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(255);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case pascalParser::T__6:
      case pascalParser::T__7:
      case pascalParser::IDENTIFIER:
      case pascalParser::INTEGER:
      case pascalParser::REAL: {
        enterOuterAlt(_localctx, 1);
        setState(247);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == pascalParser::T__6

        || _la == pascalParser::T__7) {
          setState(246);
          sign();
        }
        setState(251);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case pascalParser::IDENTIFIER: {
            setState(249);
            match(pascalParser::IDENTIFIER);
            break;
          }

          case pascalParser::INTEGER:
          case pascalParser::REAL: {
            setState(250);
            unsignedNumber();
            break;
          }

        default:
          throw NoViableAltException(this);
        }
        break;
      }

      case pascalParser::CHARACTER: {
        enterOuterAlt(_localctx, 2);
        setState(253);
        characterConstant();
        break;
      }

      case pascalParser::STRING: {
        enterOuterAlt(_localctx, 3);
        setState(254);
        stringConstant();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SignContext ------------------------------------------------------------------

pascalParser::SignContext::SignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t pascalParser::SignContext::getRuleIndex() const {
  return pascalParser::RuleSign;
}


antlrcpp::Any pascalParser::SignContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitSign(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::SignContext* pascalParser::sign() {
  SignContext *_localctx = _tracker.createInstance<SignContext>(_ctx, getState());
  enterRule(_localctx, 22, pascalParser::RuleSign);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(257);
    _la = _input->LA(1);
    if (!(_la == pascalParser::T__6
